Fix spacing

--- a/style.css
+++ b/style.css
@@ -117,7 +117,10 @@ html {
  .card1{
     min-height: 581px;
  }
-
+.percentile p{
+    margin-left: 1em;
+    margin-right: 1em;
+}
 
 main {
     display:flex;
